# fractal-drawer

./: CMakeLists.txt  Makefile  README.md
include/: Mandelbrot.h  pixel_store.hpp
src/: Mandelbrot.cpp  main.cpp
src/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h
